csrf token on  regular HTML forms

--- a/templates/back/genre/_home_order_form.html.twig
+++ b/templates/back/genre/_home_order_form.html.twig
@@ -23,5 +23,7 @@
 		{% endfor %}
 	</div>
 
+	<input type="hidden" name="token" value="{{ csrf_token('select-home-order-items') }}"/>
+
 	<button type="submit" class="btn btn-success mt-2">Enregistrer</button>
 </form>
