--- a/templates/back/editorial/_home_active_form.html.twig
+++ b/templates/back/editorial/_home_active_form.html.twig
@@ -21,5 +21,7 @@
 		</div>
 	</div>
 
+	<input type="hidden" name="token" value="{{ csrf_token('select-home-active-item') }}"/>
+
 	<button type="submit" class="btn btn-success mt-2">Enregistrer</button>
 </form>
